style.css
@font-face {
  font-family: 'Orbitron';
  src: url(./fonts/Orbitron/Orbitron-Regular.ttf);
}

* {
  margin: 0;
  padding: 0;
  font-family: 'Orbitron';
}

header {
  height: 100vh;
  position: relative;
  background-color: #111;
  color: #ddd;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
}

header > h1 {
  font-size: 3rem;
  margin: auto;
  top: 35%;
  z-index: 2;
}

.star {
  position: absolute;
  pointer-events: none;
  z-index: 1;
}

header > button {
  font-size: 1.2rem;
  animation: bobbing 4000ms infinite both;
  cursor: pointer;
  padding: 5px 10px;
  border: solid;
  transition: background-color 250ms;
  position: absolute;
  bottom: 50px;
  z-index: 2;
}

header > button:hover {
  background-color: white;
}

#section-one {
  height: 100vh;
  width: 100vw;
  background-color: lightgray;
}

#outer {
  overflow-x: hidden;
  width: 100%;
}

#inner {
  width: 500vw;
  display: flex;
}

#inner > div {
  width: 100vw;
  height: 100vh;
}

@keyframes bobbing {
  0% {
    transform: translateY(-10px);
  }
  50% {
    transform: translateY(0px);
  }
  100% {
    transform: translateY(-10px);
  }
}

@keyframes slideDown {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-100vh);
  }
}

@keyframes sparkle {
  0% {
    opacity: 0;
    transform: scale(1);
  }
  50% {
    opacity: 1;
    transform: scale(1.5);
  }
  100% {
    opacity: 0;
    transform: scale(1);
  }
}

